// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GenerateEffectEmbed GIVEN there are effects returned EXPECT result returned 1`] = `
{
  "embed": {
    "color": 3166394,
    "description": "name x1",
    "footer": {
      "icon_url": undefined,
      "text": "Page 1 of 1",
    },
    "title": "Effects",
  },
  "row": {
    "components": [
      {
        "custom_id": "effects list 0",
        "disabled": true,
        "emoji": undefined,
        "label": "Previous",
        "style": 1,
        "type": 2,
      },
      {
        "custom_id": "effects list 2",
        "disabled": true,
        "emoji": undefined,
        "label": "Next",
        "style": 1,
        "type": 2,
      },
    ],
    "type": 1,
  },
}
`;

exports[`GenerateEffectEmbed GIVEN there are no effects returned EXPECT result returned 1`] = `
{
  "embed": {
    "color": 3166394,
    "description": "*none*",
    "footer": {
      "icon_url": undefined,
      "text": "Page 1 of 1",
    },
    "title": "Effects",
  },
  "row": {
    "components": [
      {
        "custom_id": "effects list 0",
        "disabled": true,
        "emoji": undefined,
        "label": "Previous",
        "style": 1,
        "type": 2,
      },
      {
        "custom_id": "effects list 2",
        "disabled": true,
        "emoji": undefined,
        "label": "Next",
        "style": 1,
        "type": 2,
      },
    ],
    "type": 1,
  },
}
`;
